--- a/IntermittentFasting/Storyboard/Common.storyboard
+++ b/IntermittentFasting/Storyboard/Common.storyboard
@@ -58,22 +58,37 @@
                                                     <action selector="onNextMonthClick:" destination="QjA-TO-9Zy" eventType="touchUpInside" id="6mf-BB-ZIB"/>
                                                 </connections>
                                             </button>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2018년 4월" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mUH-j8-FXk">
-                                                <rect key="frame" x="103" y="20.5" width="94" height="23"/>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OFw-fI-4zs">
+                                                <rect key="frame" x="90" y="14" width="120" height="36"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="36" id="G91-Ma-mSL"/>
+                                                    <constraint firstAttribute="width" constant="120" id="bfj-gv-DfI"/>
+                                                </constraints>
                                                 <fontDescription key="fontDescription" type="system" weight="medium" pointSize="19"/>
-                                                <color key="textColor" red="0.37647058823529411" green="0.8666666666666667" blue="0.70588235294117641" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
+                                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <state key="normal" title="2018년 4월">
+                                                    <color key="titleColor" red="0.37647058823529411" green="0.8666666666666667" blue="0.70588235294117641" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                </state>
+                                                <state key="selected" title="2018년 4월">
+                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                </state>
+                                                <state key="highlighted">
+                                                    <color key="titleColor" red="0.37647058820000001" green="0.86666666670000003" blue="0.70588235290000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                </state>
+                                                <connections>
+                                                    <action selector="onTodayClick:" destination="QjA-TO-9Zy" eventType="touchUpInside" id="LFj-uo-eA5"/>
+                                                </connections>
+                                            </button>
                                         </subviews>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstItem="kdT-on-fF4" firstAttribute="leading" secondItem="1aO-gU-TzH" secondAttribute="leading" constant="4" id="7c3-4U-kMR"/>
                                             <constraint firstAttribute="height" constant="64" id="I1S-t0-gVP"/>
+                                            <constraint firstItem="OFw-fI-4zs" firstAttribute="centerX" secondItem="1aO-gU-TzH" secondAttribute="centerX" id="QNJ-vR-Cjg"/>
                                             <constraint firstItem="x73-aL-YXR" firstAttribute="centerY" secondItem="1aO-gU-TzH" secondAttribute="centerY" id="RKx-Am-Mcu"/>
                                             <constraint firstItem="kdT-on-fF4" firstAttribute="centerY" secondItem="1aO-gU-TzH" secondAttribute="centerY" id="ZMI-c0-lVW"/>
+                                            <constraint firstItem="OFw-fI-4zs" firstAttribute="centerY" secondItem="1aO-gU-TzH" secondAttribute="centerY" id="bnB-Yq-JNB"/>
                                             <constraint firstAttribute="trailing" secondItem="x73-aL-YXR" secondAttribute="trailing" constant="4" id="gxd-3p-REj"/>
-                                            <constraint firstItem="mUH-j8-FXk" firstAttribute="centerY" secondItem="1aO-gU-TzH" secondAttribute="centerY" id="jVT-5e-hSe"/>
-                                            <constraint firstItem="mUH-j8-FXk" firstAttribute="centerX" secondItem="1aO-gU-TzH" secondAttribute="centerX" id="tR7-Gp-MRL"/>
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3ea-Iw-Axz">
@@ -347,9 +362,9 @@
                         <viewLayoutGuide key="safeArea" id="P0p-sX-NhN"/>
                     </view>
                     <connections>
+                        <outlet property="btnTitle" destination="OFw-fI-4zs" id="NOM-lY-xEE"/>
                         <outlet property="collectionView" destination="gEk-S3-BPC" id="gef-1Y-tPG"/>
                         <outlet property="collectionViewHeightConstraint" destination="1ob-hi-cHb" id="NZy-LL-iAw"/>
-                        <outlet property="lbTitle" destination="mUH-j8-FXk" id="iPk-cc-1E0"/>
                         <outlet property="vContent" destination="1s9-kH-gwp" id="Cdf-4G-48s"/>
                         <outlet property="vDimmed" destination="Qyh-wx-epZ" id="E0s-TK-xom"/>
                     </connections>
