--- a/IntermittentFasting/Storyboard/Sama73.storyboard
+++ b/IntermittentFasting/Storyboard/Sama73.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -219,7 +219,7 @@
                                     <constraint firstAttribute="height" constant="64" id="sW8-HA-dfc"/>
                                 </constraints>
                             </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5Ag-wl-f6z" customClass="ViewPagerContent" customModule="Test3" customModuleProvider="target">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5Ag-wl-f6z" customClass="ViewPagerContent" customModule="IntermittentFasting" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="84" width="375" height="583"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
@@ -247,7 +247,7 @@
         <!--Food Find View Controller-->
         <scene sceneID="Zes-39-qoM">
             <objects>
-                <viewController storyboardIdentifier="FoodFindViewController" id="4gi-Hv-7xs" customClass="FoodFindViewController" customModule="Test3" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="FoodFindViewController" id="4gi-Hv-7xs" customClass="FoodFindViewController" customModule="IntermittentFasting" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="jhT-92-kQB">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -274,7 +274,7 @@
         <!--Personal Food View Controller-->
         <scene sceneID="WBy-JN-W9b">
             <objects>
-                <viewController storyboardIdentifier="PersonalFoodViewController" id="evZ-P5-jrj" customClass="PersonalFoodViewController" customModule="Test3" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="PersonalFoodViewController" id="evZ-P5-jrj" customClass="PersonalFoodViewController" customModule="IntermittentFasting" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="apt-Po-Z6R">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -285,14 +285,30 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Hv2-hX-5Id">
+                                <rect key="frame" x="302" y="588" width="57" height="57"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="57" id="oea-jb-MJE"/>
+                                    <constraint firstAttribute="height" constant="57" id="uaJ-ke-Bhi"/>
+                                </constraints>
+                                <state key="normal" image="btn_food_add.png"/>
+                                <connections>
+                                    <action selector="onFoodAddClick:" destination="evZ-P5-jrj" eventType="touchUpInside" id="kJw-8p-Qgr"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="ovW-UW-OLS" firstAttribute="bottom" secondItem="Hv2-hX-5Id" secondAttribute="bottom" constant="22" id="GhS-86-jcE"/>
+                            <constraint firstItem="ovW-UW-OLS" firstAttribute="trailing" secondItem="Hv2-hX-5Id" secondAttribute="trailing" constant="16" id="Imp-hZ-PnC"/>
                             <constraint firstItem="zqb-xP-nxO" firstAttribute="centerX" secondItem="apt-Po-Z6R" secondAttribute="centerX" id="Y0m-46-vUw"/>
                             <constraint firstItem="zqb-xP-nxO" firstAttribute="top" secondItem="ovW-UW-OLS" secondAttribute="top" constant="50" id="rjb-cs-23i"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="ovW-UW-OLS"/>
                     </view>
+                    <connections>
+                        <outlet property="btnFoodAdd" destination="Hv2-hX-5Id" id="7lQ-P6-4hj"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2Ua-6Q-deh" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -301,7 +317,7 @@
         <!--Book Mark View Controller-->
         <scene sceneID="wJu-UT-Zsx">
             <objects>
-                <viewController storyboardIdentifier="BookMarkViewController" id="pde-xI-nRy" customClass="BookMarkViewController" customModule="Test3" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="BookMarkViewController" id="pde-xI-nRy" customClass="BookMarkViewController" customModule="IntermittentFasting" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="VfF-2y-Yvs">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -327,7 +343,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="btn_calendar.png" width="25" height="28"/>
+        <image name="btn_calendar.png" width="25.5" height="28.5"/>
         <image name="btn_close.png" width="23" height="23"/>
         <image name="btn_food_add.png" width="57" height="57"/>
     </resources>
