--- a/IntermittentFasting/Storyboard/Common.storyboard
+++ b/IntermittentFasting/Storyboard/Common.storyboard
@@ -545,10 +545,20 @@
                                     </textField>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Yid-ps-v3p" customClass="UZTextField" customModule="IntermittentFasting" customModuleProvider="target">
                                         <rect key="frame" x="26" y="98" width="140" height="36"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="kcal" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mn9-zV-e7a">
+                                                <rect key="frame" x="100" y="6.5" width="34" height="23"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="19"/>
+                                                <color key="textColor" red="0.24313725490196078" green="0.24313725490196078" blue="0.24313725490196078" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="36" id="675-mQ-bGL"/>
                                             <constraint firstAttribute="width" constant="140" id="7cX-oT-8gV"/>
+                                            <constraint firstAttribute="trailing" secondItem="mn9-zV-e7a" secondAttribute="trailing" constant="6" id="BQ8-68-q9S"/>
+                                            <constraint firstItem="mn9-zV-e7a" firstAttribute="centerY" secondItem="Yid-ps-v3p" secondAttribute="centerY" id="Xdr-Qh-iHd"/>
                                         </constraints>
                                         <userDefinedRuntimeAttributes>
                                             <userDefinedRuntimeAttribute type="number" keyPath="lineHeight">
@@ -573,14 +583,27 @@
                                             <userDefinedRuntimeAttribute type="number" keyPath="keyboardType">
                                                 <integer key="value" value="4"/>
                                             </userDefinedRuntimeAttribute>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="marginRight">
+                                                <real key="value" value="46"/>
+                                            </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qBt-yI-4FO" customClass="UZTextField" customModule="IntermittentFasting" customModuleProvider="target">
                                         <rect key="frame" x="209" y="98" width="140" height="36"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="g" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SAr-Dq-npE">
+                                                <rect key="frame" x="123" y="6.5" width="11" height="23"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="19"/>
+                                                <color key="textColor" red="0.24313725490196078" green="0.24313725490196078" blue="0.24313725490196078" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="140" id="3vf-dg-eRd"/>
+                                            <constraint firstItem="SAr-Dq-npE" firstAttribute="centerY" secondItem="qBt-yI-4FO" secondAttribute="centerY" id="5tM-Rq-kqf"/>
                                             <constraint firstAttribute="height" constant="36" id="GbG-pv-JzJ"/>
+                                            <constraint firstAttribute="trailing" secondItem="SAr-Dq-npE" secondAttribute="trailing" constant="6" id="aKQ-Zu-fLC"/>
                                         </constraints>
                                         <userDefinedRuntimeAttributes>
                                             <userDefinedRuntimeAttribute type="number" keyPath="lineHeight">
@@ -604,6 +627,9 @@
                                             </userDefinedRuntimeAttribute>
                                             <userDefinedRuntimeAttribute type="number" keyPath="keyboardType">
                                                 <integer key="value" value="4"/>
+                                            </userDefinedRuntimeAttribute>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="marginRight">
+                                                <real key="value" value="23"/>
                                             </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
                                     </view>
