음식리스트 추가

--- a/IntermittentFasting/Storyboard/Sama73.storyboard
+++ b/IntermittentFasting/Storyboard/Sama73.storyboard
@@ -107,12 +107,6 @@
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                             </view>
-                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="120" minValue="0.0" maxValue="240" translatesAutoresizingMaskIntoConstraints="NO" id="sIJ-LV-h7w">
-                                <rect key="frame" x="18" y="371" width="339" height="31"/>
-                                <connections>
-                                    <action selector="sliderValueChanged:" destination="vru-jh-F64" eventType="valueChanged" id="n3Z-zf-F9Z"/>
-                                </connections>
-                            </slider>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="swA-fk-x4d">
                                 <rect key="frame" x="84" y="334" width="207" height="18"/>
                                 <subviews>
@@ -139,6 +133,34 @@
                                     <constraint firstItem="1RI-vY-Adg" firstAttribute="leading" secondItem="swA-fk-x4d" secondAttribute="leading" id="rda-xT-Pp6"/>
                                 </constraints>
                             </view>
+                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="120" minValue="0.0" maxValue="240" translatesAutoresizingMaskIntoConstraints="NO" id="sIJ-LV-h7w">
+                                <rect key="frame" x="18" y="326" width="339" height="31"/>
+                                <connections>
+                                    <action selector="sliderValueChanged:" destination="vru-jh-F64" eventType="valueChanged" id="n3Z-zf-F9Z"/>
+                                </connections>
+                            </slider>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" directionalLockEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vnN-nE-wBh">
+                                <rect key="frame" x="0.0" y="368" width="375" height="240"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5fj-jU-cqJ">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="240"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="240" id="jbj-Nh-kf8"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="240" id="9fl-Lp-Yeu"/>
+                                    <constraint firstAttribute="trailing" secondItem="5fj-jU-cqJ" secondAttribute="trailing" id="Mey-Hf-bYS"/>
+                                    <constraint firstItem="5fj-jU-cqJ" firstAttribute="leading" secondItem="vnN-nE-wBh" secondAttribute="leading" id="WCH-fV-NBf"/>
+                                    <constraint firstItem="5fj-jU-cqJ" firstAttribute="top" secondItem="vnN-nE-wBh" secondAttribute="top" id="wdR-UI-yxf"/>
+                                    <constraint firstAttribute="bottom" secondItem="5fj-jU-cqJ" secondAttribute="bottom" id="yUx-fh-E2A"/>
+                                </constraints>
+                                <connections>
+                                    <outlet property="delegate" destination="vru-jh-F64" id="B26-KG-5qW"/>
+                                </connections>
+                            </scrollView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="caI-g7-mBf">
                                 <rect key="frame" x="302" y="595" width="57" height="57"/>
                                 <constraints>
@@ -157,11 +179,15 @@
                             <constraint firstItem="MnH-pK-fQl" firstAttribute="centerX" secondItem="aSR-n3-CPh" secondAttribute="centerX" id="AnZ-yS-SNy"/>
                             <constraint firstItem="swA-fk-x4d" firstAttribute="centerX" secondItem="aSR-n3-CPh" secondAttribute="centerX" id="BrE-YH-FU2"/>
                             <constraint firstItem="ppb-oU-KCH" firstAttribute="trailing" secondItem="caI-g7-mBf" secondAttribute="trailing" constant="16" id="CDd-vu-pBt"/>
+                            <constraint firstItem="vnN-nE-wBh" firstAttribute="leading" secondItem="ppb-oU-KCH" secondAttribute="leading" id="IXX-rp-Lwj"/>
+                            <constraint firstItem="vnN-nE-wBh" firstAttribute="trailing" secondItem="ppb-oU-KCH" secondAttribute="trailing" id="Juv-Wh-t2x"/>
                             <constraint firstItem="swA-fk-x4d" firstAttribute="top" secondItem="MnH-pK-fQl" secondAttribute="bottom" constant="13" id="KkB-S6-6x9"/>
                             <constraint firstItem="ppb-oU-KCH" firstAttribute="trailing" secondItem="sIJ-LV-h7w" secondAttribute="trailing" constant="20" id="Kom-hS-YAl"/>
                             <constraint firstItem="1z2-nF-sNY" firstAttribute="top" secondItem="ppb-oU-KCH" secondAttribute="top" id="OS4-6E-H1e"/>
                             <constraint firstItem="MnH-pK-fQl" firstAttribute="top" secondItem="1z2-nF-sNY" secondAttribute="bottom" constant="7" id="S5J-du-JKK"/>
-                            <constraint firstItem="sIJ-LV-h7w" firstAttribute="top" secondItem="MnH-pK-fQl" secondAttribute="bottom" constant="50" id="dyB-vV-znK"/>
+                            <constraint firstItem="5fj-jU-cqJ" firstAttribute="width" secondItem="aSR-n3-CPh" secondAttribute="width" id="SkL-nQ-qVr"/>
+                            <constraint firstItem="vnN-nE-wBh" firstAttribute="top" secondItem="sIJ-LV-h7w" secondAttribute="bottom" constant="12" id="WO9-rl-fT8"/>
+                            <constraint firstItem="sIJ-LV-h7w" firstAttribute="top" secondItem="MnH-pK-fQl" secondAttribute="bottom" constant="5" id="dyB-vV-znK"/>
                             <constraint firstItem="sIJ-LV-h7w" firstAttribute="leading" secondItem="ppb-oU-KCH" secondAttribute="leading" constant="20" id="gvI-Od-HRm"/>
                             <constraint firstItem="1z2-nF-sNY" firstAttribute="trailing" secondItem="ppb-oU-KCH" secondAttribute="trailing" id="nvc-ly-qtG"/>
                             <constraint firstItem="ppb-oU-KCH" firstAttribute="bottom" secondItem="caI-g7-mBf" secondAttribute="bottom" constant="15" id="z2b-Sn-fPW"/>
@@ -173,6 +199,7 @@
                         <outlet property="lbCalorie" destination="VGW-8U-5DQ" id="6xk-uf-8Wc"/>
                         <outlet property="lbTitle" destination="btY-JW-j7Y" id="WXA-dX-VaM"/>
                         <outlet property="sValue" destination="sIJ-LV-h7w" id="jb4-Ic-AQp"/>
+                        <outlet property="scrollView" destination="vnN-nE-wBh" id="5po-yH-fs5"/>
                         <outlet property="vWaveGage" destination="NCq-nr-exp" id="MH0-rC-qng"/>
                     </connections>
                 </viewController>
@@ -205,7 +232,6 @@
                                         </constraints>
                                         <state key="normal" image="btn_close.png"/>
                                         <connections>
-                                            <action selector="onCalendarClick:" destination="vru-jh-F64" eventType="touchUpInside" id="AZh-0e-fTg"/>
                                             <action selector="onCloseClick:" destination="Myp-qR-PLf" eventType="touchUpInside" id="TLM-9k-yYB"/>
                                         </connections>
                                     </button>
@@ -340,6 +366,60 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="RhR-7J-gD9" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="3113" y="1758"/>
+        </scene>
+        <!--Food List View Controller-->
+        <scene sceneID="HNi-lP-L8t">
+            <objects>
+                <viewController storyboardIdentifier="FoodListViewController" id="pf7-UI-o1s" customClass="FoodListViewController" customModule="IntermittentFasting" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="UOm-bb-CFi">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uwR-VX-rbT" customClass="RoundLineView" customModule="IntermittentFasting" customModuleProvider="target">
+                                <rect key="frame" x="11" y="20" width="353" height="208"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pAu-hH-MT1">
+                                        <rect key="frame" x="172.5" y="20" width="8" height="21"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="pAu-hH-MT1" firstAttribute="top" secondItem="uwR-VX-rbT" secondAttribute="top" constant="20" id="L1s-1O-8aR"/>
+                                    <constraint firstAttribute="height" constant="208" id="YFB-w2-bUY"/>
+                                    <constraint firstItem="pAu-hH-MT1" firstAttribute="centerX" secondItem="uwR-VX-rbT" secondAttribute="centerX" id="imF-4A-xyw"/>
+                                </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                        <real key="value" value="5"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
+                                        <real key="value" value="1"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
+                                        <color key="value" red="0.78431372549019607" green="0.78431372549019607" blue="0.78431372549019607" alpha="1" colorSpace="calibratedRGB"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="uwR-VX-rbT" firstAttribute="top" secondItem="mdK-NE-v5D" secondAttribute="top" id="2yl-9s-erk"/>
+                            <constraint firstItem="uwR-VX-rbT" firstAttribute="leading" secondItem="mdK-NE-v5D" secondAttribute="leading" constant="11" id="Jng-db-KML"/>
+                            <constraint firstItem="mdK-NE-v5D" firstAttribute="trailing" secondItem="uwR-VX-rbT" secondAttribute="trailing" constant="11" id="blu-a6-wkG"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="mdK-NE-v5D"/>
+                    </view>
+                    <connections>
+                        <outlet property="lbTitle" destination="pAu-hH-MT1" id="m2y-tY-2hi"/>
+                        <outlet property="vContent" destination="uwR-VX-rbT" id="GO9-cR-Tg8"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="OMg-e7-n5X" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1409" y="1757"/>
         </scene>
     </scenes>
     <resources>
